github push demo two

--- a/force-app/main/default/classes/pullDemo.cls
+++ b/force-app/main/default/classes/pullDemo.cls
@@ -9,6 +9,9 @@ public class pullDemo{
 
         system.debug('123 github push demo');
 
+        system.debug('123 github push demo 2');
+
+
     }
  
 }
